# SimpleHttpProxy

./: MANIFEST.in  PKG-INFO  README.md  SimpleHttpProxy.py  build_zipapp.sh  pyproject.toml  setup.cfg  setup.py
SimpleHttpProxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
