[metadata]
name = SimpleHttpProxy
version = 0.0.3
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This package implements a simple HTTP(S) proxy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/SimpleHttpProxy
project_urls = Github=https://github.com/mauricelambert/SimpleHttpProxy, Documentation=https://mauricelambert.github.io/info/python/security/SimpleHttpProxy.html, Python Executable=https://mauricelambert.github.io/info/python/security/ProxyPrinter.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/ProxyPrinter.exe
download_url = https://mauricelambert.github.io/info/python/security/ProxyPrinter.pyz
classifiers = 
	Framework :: AsyncIO
	Environment :: Console
	Operating System :: MacOS
	Natural Language :: English
	Topic :: System :: Networking
	Topic :: Internet :: WWW/HTTP
	Programming Language :: Python
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft :: Windows
	Topic :: Software Development :: Libraries
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable
	Topic :: Internet :: WWW/HTTP :: HTTP Servers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
keywords = Proxy, Web, Browser, HTTP, HTTPS, Asynchronous, ProxyHttp
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = SimpleHttpProxy
install_requires = 

[options.entry_points]
console_scripts = 
	ProxyPrinter = SimpleHttpProxy:main

[egg_info]
tag_build = 
tag_date = 0

